# computer_vision

./: .gitignore  README.md  autoencoders.ipynb  dcgan.ipynb  ddim.ipynb  ddpm.ipynb  ddpm_cifar.ipynb  ddpm_mnist.ipynb  fcn_segmentation.ipynb  hello.py  mixture_of_experts.ipynb  mnist_lenet.ipynb  moe_experiments.ipynb  pyproject.toml  resnets.ipynb
BackgroundWork/: LinearRegression.ipynb  LinearRegression_SGD.ipynb  LogisticRegression.ipynb  README.md
P4GANS/: P4GenerativeAdversarialNets.ipynb
Project1/: PyTorchMNIST.ipynb  README.md
Project1LeNetClassification/: PyTorchMNIST.ipynb  README.md
Project2GTSRB/: GTSRBDataAugmentation.ipynb  Project2GTSRB.ipynb  README.md
Project2TransferLearning/: README.md
Project3SemanticSegmentation/: README.md  SemanticSegCityScapes.ipynb  SemanticSegCityscapes.ipynb
Project3SemanticSegmentation/.ipynb_checkpoints/: SemanticSegCityScapes-checkpoint.ipynb
Project4GANs/: P4GenerativeAdversarialNets.ipynb  README.md
augmentation/: GTSRBDataAugmentation.ipynb  Project2GTSRB.ipynb  README.md
models/: attention2D.py  resnet.py  unet.py
notebooks/: autoencoders.ipynb  ddpm.ipynb  resnets.ipynb
notebooks/augmentation/data/gtsrb/GTSRB/Training/00000/: GT-00000.csv
notebooks/augmentation/data/gtsrb/GTSRB/Training/00001/: GT-00001.csv
notebooks/augmentation/data/gtsrb/GTSRB/Training/00002/: GT-00002.csv
notebooks/augmentation/data/gtsrb/GTSRB/Training/00003/: GT-00003.csv
notebooks/augmentation/data/gtsrb/GTSRB/Training/00004/: GT-00004.csv
src/: README.md  attention2D.py  ddpm.py  resnet.py  unet.py  utils.py
(+38 files in other folders)
