[project]
name = "computer-vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diffusers>=0.30.3",
    "ipython>=8.28.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "requests>=2.32.3",
    "ruff>=0.6.9",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
